{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 37,
  "lineage": "521be54e-4fa7-1543-2ae8-27116ef1fb48",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c43014110e03ff3",
            "arn": "arn:aws:ec2:us-east-2:811800851991:elastic-ip/eipalloc-03c43014110e03ff3",
            "association_id": "eipassoc-0dac66e89fa90561c",
            "domain": "vpc",
            "id": "eipalloc-03c43014110e03ff3",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0e5734cf4157d62c7",
            "private_dns": "ip-10-0-1-204.us-east-2.compute.internal",
            "private_ip": "10.0.1.204",
            "public_dns": "ec2-3-147-88-28.us-east-2.compute.amazonaws.com",
            "public_ip": "3.147.88.28",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "811800851991",
            "id": "eipalloc-03c43014110e03ff3",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811800851991:internet-gateway/igw-02b0df7061e98523d",
            "id": "igw-02b0df7061e98523d",
            "owner_id": "811800851991",
            "region": "us-east-2",
            "tags": {
              "Name": "udagram-igw"
            },
            "tags_all": {
              "Name": "udagram-igw"
            },
            "vpc_id": "vpc-0a4b18d4be529719c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "811800851991",
            "id": "igw-02b0df7061e98523d",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.udagram_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:811800851991:loadbalancer/app/app-lb/731c2d1e1e356c58",
            "arn_suffix": "app/app-lb/731c2d1e1e356c58",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-lb-193868732.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:811800851991:loadbalancer/app/app-lb/731c2d1e1e356c58",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb",
            "preserve_host_header": false,
            "region": "us-east-2",
            "security_groups": [
              "sg-0daa1b6347d883fe7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07c0c9c51ac00fd82"
              },
              {
                "subnet_id": "subnet-0ee753b49097a1285"
              }
            ],
            "subnets": [
              "subnet-07c0c9c51ac00fd82",
              "subnet-0ee753b49097a1285"
            ],
            "vpc_id": "vpc-0a4b18d4be529719c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:811800851991:loadbalancer/app/app-lb/731c2d1e1e356c58"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2",
            "aws_vpc.udagram_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listen",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:811800851991:listener/app/app-lb/731c2d1e1e356c58/4a8981a5bd990530",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:811800851991:targetgroup/backend-target-group/cf958ee18a27d25e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:811800851991:listener/app/app-lb/731c2d1e1e356c58/4a8981a5bd990530",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:811800851991:loadbalancer/app/app-lb/731c2d1e1e356c58",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:811800851991:listener/app/app-lb/731c2d1e1e356c58/4a8981a5bd990530"
          },
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.lb_target",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2",
            "aws_vpc.udagram_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:811800851991:targetgroup/backend-target-group/cf958ee18a27d25e",
            "arn_suffix": "targetgroup/backend-target-group/cf958ee18a27d25e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:811800851991:targetgroup/backend-target-group/cf958ee18a27d25e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:811800851991:loadbalancer/app/app-lb/731c2d1e1e356c58"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "backend-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a4b18d4be529719c"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:811800851991:targetgroup/backend-target-group/cf958ee18a27d25e"
          },
          "dependencies": [
            "aws_vpc.udagram_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811800851991:route-table/rtb-0a0b672789f4de45d",
            "id": "rtb-0a0b672789f4de45d",
            "owner_id": "811800851991",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02b0df7061e98523d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a4b18d4be529719c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "811800851991",
            "id": "rtb-0a0b672789f4de45d",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.udagram_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subnet_assoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6ad0cc48c6272d2",
            "region": "us-east-2",
            "route_table_id": "rtb-0a0b672789f4de45d",
            "subnet_id": "subnet-0ee753b49097a1285"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "811800851991",
            "id": "rtbassoc-0f6ad0cc48c6272d2",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet1",
            "aws_vpc.udagram_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subnet_assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cca46dedff1a610",
            "region": "us-east-2",
            "route_table_id": "rtb-0a0b672789f4de45d",
            "subnet_id": "subnet-07c0c9c51ac00fd82"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "811800851991",
            "id": "rtbassoc-04cca46dedff1a610",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet2",
            "aws_vpc.udagram_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811800851991:security-group/sg-0daa1b6347d883fe7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0daa1b6347d883fe7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "811800851991",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a4b18d4be529719c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "811800851991",
            "id": "sg-0daa1b6347d883fe7",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.udagram_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811800851991:security-group/sg-0f6223795cc7a01ef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6223795cc7a01ef",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0daa1b6347d883fe7"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "backend-sg",
            "name_prefix": "",
            "owner_id": "811800851991",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a4b18d4be529719c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "811800851991",
            "id": "sg-0f6223795cc7a01ef",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.udagram_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811800851991:security-group/sg-068b1d4330baf26e8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-068b1d4330baf26e8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f6223795cc7a01ef"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "811800851991",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a4b18d4be529719c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "811800851991",
            "id": "sg-068b1d4330baf26e8",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.backend_sg",
            "aws_vpc.udagram_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backend_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811800851991:subnet/subnet-0d231399c577cdcc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d231399c577cdcc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "811800851991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "BackendSubnet1"
            },
            "tags_all": {
              "Name": "BackendSubnet1"
            },
            "vpc_id": "vpc-0a4b18d4be529719c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "811800851991",
            "id": "subnet-0d231399c577cdcc9",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.udagram_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backend_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811800851991:subnet/subnet-0807ffb97bfbfe71f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0807ffb97bfbfe71f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "811800851991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "BackendSubnet2"
            },
            "tags_all": {
              "Name": "BackendSubnet2"
            },
            "vpc_id": "vpc-0a4b18d4be529719c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "811800851991",
            "id": "subnet-0807ffb97bfbfe71f",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.udagram_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811800851991:subnet/subnet-0d386cc4545e620d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d386cc4545e620d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "811800851991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "DBSubnet1"
            },
            "tags_all": {
              "Name": "DBSubnet1"
            },
            "vpc_id": "vpc-0a4b18d4be529719c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "811800851991",
            "id": "subnet-0d386cc4545e620d8",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.udagram_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811800851991:subnet/subnet-0c835a465290a98df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c835a465290a98df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "811800851991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "DBSubnet2"
            },
            "tags_all": {
              "Name": "DBSubnet2"
            },
            "vpc_id": "vpc-0a4b18d4be529719c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "811800851991",
            "id": "subnet-0c835a465290a98df",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.udagram_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811800851991:subnet/subnet-0ee753b49097a1285",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee753b49097a1285",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "811800851991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "public_subnet_a"
            },
            "tags_all": {
              "Name": "public_subnet_a"
            },
            "vpc_id": "vpc-0a4b18d4be529719c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "811800851991",
            "id": "subnet-0ee753b49097a1285",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.udagram_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811800851991:subnet/subnet-07c0c9c51ac00fd82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c0c9c51ac00fd82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "811800851991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "public_subnet_b"
            },
            "tags_all": {
              "Name": "public_subnet_b"
            },
            "vpc_id": "vpc-0a4b18d4be529719c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "811800851991",
            "id": "subnet-07c0c9c51ac00fd82",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.udagram_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "udagram_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811800851991:vpc/vpc-0a4b18d4be529719c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-059a18f2faad6dcb4",
            "default_route_table_id": "rtb-0b788d7f60385bd3a",
            "default_security_group_id": "sg-06c2648ecca7617b7",
            "dhcp_options_id": "dopt-08b6d98e82bc6f591",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a4b18d4be529719c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b788d7f60385bd3a",
            "owner_id": "811800851991",
            "region": "us-east-2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "811800851991",
            "id": "vpc-0a4b18d4be529719c",
            "region": "us-east-2"
          }
        }
      ]
    }
  ]
}